<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	>
	<!--app:showAsAction="collapseActionView|ifRoom"-->
	<!--app:showAsAction="always"-->
	<item
		android:id="@+id/inp_mn_save"
        android:icon="@drawable/save128"
		app:showAsAction="always" />
	<item
		android:id="@+id/inp_mn_clear"
        android:icon="@drawable/addnew128"
		app:showAsAction="always" />
	<item
		android:id="@+id/inp_mn_tolists"
        android:icon="@drawable/list128"
		app:showAsAction="always" />
	<item
		android:id="@+id/inp_mn_overflow"
        android:icon="@drawable/icon_overflow"
		app:showAsAction="always">
		<menu>
			<item
				android:id="@+id/inp_mn_tohome"
				android:icon="@drawable/icon_home"
				android:title="@string/inp_mn_home"
				app:showAsAction="never" />
			<item
				android:id="@+id/inp_mn_settings"
				android:icon="@drawable/icon_settings"
				android:title="@string/inp_mn_setting"
				app:showAsAction="never" />
			<item
				android:id="@+id/inp_mn_del"
				android:icon="@drawable/icon_delete"
				android:title="@string/inp_mn_del"
				app:showAsAction="never" />
			<item
				android:id="@+id/inp_mn_copy"
				android:icon="@drawable/icon_copy"
				android:title="@string/inp_mn_copy"
				app:showAsAction="never" />
		</menu>
	</item>
</menu>
