<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	>
	
	<ImageView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:id="@+id/home_pageImageView"
		android:layout_centerVertical="true"
		android:layout_centerHorizontal="true"
		android:src="@drawable/home_back"
		android:scaleType="centerCrop"
		/>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:gravity="center"
	>
	<LinearLayout
		android:id="@+id/home_pageLinearLayout"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="center"
		android:orientation="horizontal"
		android:layout_weight="1"
	>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:orientation="vertical"
		>
			<Button
				android:id="@+id/btn_to_add_new"
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:layout_margin="@dimen/home_btn_arnd"
				android:paddingLeft="@dimen/vp_mrgin_Pad"
				android:paddingRight="@dimen/vp_mrgin_Pad"
				android:text="@string/Hm_Btn_AddNew"
				android:drawableLeft="@drawable/addnew128"
				android:background="@drawable/bg_home_btn"
			/>
			<Button
				android:id="@+id/btn_to_memo"
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:layout_margin="@dimen/home_btn_arnd"
				android:paddingLeft="@dimen/vp_mrgin_Pad"
				android:paddingRight="@dimen/vp_mrgin_Pad"
				android:text="@string/Hm_Btn_OpMemo"
				android:drawableLeft="@drawable/openmemo128"
				android:background="@drawable/bg_home_btn"
			/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:orientation="vertical"
		>
			<Button
				android:id="@+id/btn_to_lists"
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:layout_margin="@dimen/home_btn_arnd"
				android:paddingLeft="@dimen/vp_mrgin_Pad"
				android:paddingRight="@dimen/vp_mrgin_Pad"
				android:text="@string/Hm_Btn_OpList"
				android:drawableLeft="@drawable/list128"
				android:background="@drawable/bg_home_btn"
			/>
			<Button
				android:id="@+id/btn_to_recycle_bin"
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:layout_margin="@dimen/home_btn_arnd"
				android:paddingLeft="@dimen/vp_mrgin_Pad"
				android:paddingRight="@dimen/vp_mrgin_Pad"
				android:text="@string/Hm_Btn_Recycle"
				android:drawableLeft="@drawable/recyclebin128"
				android:background="@drawable/bg_home_btn"
			/>
		</LinearLayout>
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:gravity="center"
		android:orientation="vertical"
		android:layout_weight="1"
	>
		<Button
			android:id="@+id/btn_to_backup"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_margin="@dimen/home_btn_arnd"
			android:paddingLeft="@dimen/vp_mrgin_Pad"
			android:paddingRight="@dimen/vp_mrgin_Pad"
			android:text="@string/Hm_Btn_BKUP"
			android:drawableLeft="@drawable/bkup128"
			android:background="@drawable/bg_home_btn"
		/>

		<Button
			android:id="@+id/btn_to_restore"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_margin="@dimen/home_btn_arnd"
			android:paddingLeft="@dimen/vp_mrgin_Pad"
			android:paddingRight="@dimen/vp_mrgin_Pad"
			android:text="@string/Hm_Btn_Restore"
			android:drawableLeft="@drawable/restore128"
			android:background="@drawable/bg_home_btn"
			
		/>
		<Button
			android:id="@+id/btn_to_settings"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_margin="@dimen/home_btn_arnd"
			android:paddingLeft="@dimen/vp_mrgin_Pad"
			android:paddingRight="@dimen/vp_mrgin_Pad"
			android:text="@string/Hm_Btn_Settings"
			android:drawableLeft="@drawable/settings128"
			android:background="@drawable/bg_home_btn"
		/>
	</LinearLayout>
	</LinearLayout>
	
</RelativeLayout>

